// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMPNotice matches snapshots 1`] = `
<div
  className="amp-notice amp-notice--success amp-notice--large"
>
  <div
    className="amp-notice__icon"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm4.393 7.5l-5.643 5.784-2.644-2.506-1.856 1.858 4.5 4.364 7.5-7.643-1.857-1.857z"
        fill="#00A02F"
      />
    </svg>
  </div>
  <div
    className="amp-notice__body"
  >
    Component children
  </div>
</div>
`;

exports[`AMPNotice matches snapshots 2`] = `
<div
  className="amp-notice amp-notice--warning amp-notice--small"
>
  <div
    className="amp-notice__icon"
  >
    <svg
      fill="none"
      height="44"
      viewBox="0 0 44 44"
      width="44"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.18125 16.1001L16.4324 7.84902L28.1012 7.84902L36.3523 16.1001L36.3523 27.769L28.1012 36.0201L16.4324 36.0201L8.18125 27.769L8.18125 16.1001Z"
        stroke="#EF0000"
        strokeWidth="2"
      />
      <path
        d="M24.2671 27.4609C24.2671 28.5654 23.3716 29.4609 22.2671 29.4609C21.1626 29.4609 20.2671 28.5654 20.2671 27.4609C20.2671 26.3564 21.1626 25.4609 22.2671 25.4609C23.3716 25.4609 24.2671 26.3564 24.2671 27.4609Z"
        fill="#EF0000"
      />
      <line
        stroke="#EF0000"
        strokeWidth="2"
        x1="22.2891"
        x2="22.2891"
        y1="14.0586"
        y2="23.5659"
      />
    </svg>
  </div>
  <div
    className="amp-notice__body"
  >
    Component children
  </div>
</div>
`;
